[project]
name = "personal-context-fast-mcp"
version = "0.1.0"
description = "Contained FastMCP server for Personal Context"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=3.1.0"
]

[project.scripts]
personal-context-fast-mcp = "server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
